testsuite/poke.pkl/div-f32-diag-1.pk
/* { dg-do compile } */

var res
  = 3H ./ 1; /* { dg-error "invalid operand .*" } */
